--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
   },
   "homepage": "https://github.com/laurods/it-app#readme",
   "dependencies": {
-    "@types/mongodb": "^3.6.0",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.0",
-    "file-size": "^1.0.0",
+    "bcrypt": "^5.0.0",
+    "cookie": "^0.4.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongodb": "^3.6.3",
-    "next": "^10.0.3",
-    "react": "^17.0.1",
-    "react-circular-progressbar": "^2.0.3",
-    "react-dom": "^17.0.1",
+    "mongodb": "^3.5.9",
+    "next": "latest",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.4",
-    "react-icons": "^4.1.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1"    
   }
   
 }
+
