--- a/package.json
+++ b/package.json
@@ -19,18 +19,10 @@
   "homepage": "https://github.com/laurods/it-app#readme",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "axios": "^0.21.0",
-    "bcrypt": "^5.0.0",
-    "cookie": "^0.4.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20",
-    "mongodb": "^3.5.9",
+    "@material-ui/icons": "^4.11.2",    
     "next": "latest",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-dropzone": "^11.2.4",
-    "styled-components": "^5.2.1"    
+    "react-dom": "^16.13.1"  
   }
   
 }
